--- a/HiveMindUnityClient/Assembly-CSharp.csproj
+++ b/HiveMindUnityClient/Assembly-CSharp.csproj
@@ -60,6 +60,7 @@
   <ItemGroup>
     <Compile Include="Assets/Scripts/GridController.cs" />
     <Compile Include="Assets/Scripts/HexTileController.cs" />
+    <Compile Include="Assets/Scripts/PlayerLook.cs" />
     <Compile Include="Assets/Scripts/CoreCommunication.cs" />
     <Compile Include="Assets/Scripts/PlayerController.cs" />
     <Compile Include="Assets/Scripts/ServerData.cs" />
