--- a/HiveMindUnityClient/Assembly-CSharp.csproj
+++ b/HiveMindUnityClient/Assembly-CSharp.csproj
@@ -59,13 +59,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\GridController.cs" />
-    <Compile Include="Assets\ExitUpAndDown.cs" />
-    <Compile Include="Assets\ExitMoveOnGrid.cs" />
+    <Compile Include="Assets\Scripts\ExitMoveOnGrid.cs" />
     <Compile Include="Assets\Scripts\MoveExit.cs" />
     <Compile Include="Assets\Scripts\HexTileController.cs" />
     <Compile Include="Assets\Scripts\PlayerLook.cs" />
     <Compile Include="Assets\Scripts\CoreCommunication.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
+    <Compile Include="Assets\Scripts\ExitUpAndDown.cs" />
     <Compile Include="Assets\Scripts\ServerData.cs" />
   </ItemGroup>
   <ItemGroup>
