--- a/HiveMindUnityServer/Assembly-CSharp.csproj
+++ b/HiveMindUnityServer/Assembly-CSharp.csproj
@@ -58,10 +58,10 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.10f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\scripts\HexTileController.cs" />
     <Compile Include="Assets\scripts\ServerController.cs" />
     <Compile Include="Assets\scripts\CoreCommunication.cs" />
     <Compile Include="Assets\scripts\ServerData.cs" />
+    <Compile Include="Assets\scripts\PlayerData.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
