Started cleanup on server. Also began complete reconstruction of object decomposer and composer classes.

--- a/HiveMindUnityServer/Assembly-CSharp.csproj
+++ b/HiveMindUnityServer/Assembly-CSharp.csproj
@@ -59,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets/Scripts/PlayerData.cs" />
+    <Compile Include="Assets/Scripts/GameObjectID.cs" />
     <Compile Include="Assets/Scripts/ObjectComposer.cs" />
     <Compile Include="Assets/Scripts/TileStream.cs" />
     <Compile Include="Assets/Scripts/ObjectDecomponser.cs" />
