--- a/HiveMindCore/HiveMindCore/HiveMindCore.csproj
+++ b/HiveMindCore/HiveMindCore/HiveMindCore.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="MySql.Data" Version="9.2.0" />
       <PackageReference Include="newtonsoft.json" Version="9.0.1" />
     </ItemGroup>
 
