Created script to use hotbar items, fixed issue with empty items not displaying.

--- a/HiveMindUnityClient/Assembly-CSharp.csproj
+++ b/HiveMindUnityClient/Assembly-CSharp.csproj
@@ -69,9 +69,9 @@
     <Compile Include="Assets\Scripts\GameObjectID.cs" />
     <Compile Include="Assets\Scripts\UI\Menu Elements\HexButtonHover.cs" />
     <Compile Include="Assets\Scripts\UI\Game Elements\MenuNavigation.cs" />
+    <Compile Include="Assets\Scripts\UI\Game Elements\UseHotbar.cs" />
     <Compile Include="Assets\Scripts\TileStream.cs" />
     <Compile Include="Assets\Scripts\ObjectManager.cs" />
-    <Compile Include="Assets\ScriptableObjects\Scripts\EmptyObject.cs" />
     <Compile Include="Assets\Scripts\CoroutineResult.cs" />
     <Compile Include="Assets\Scripts\HexTileController.cs" />
     <Compile Include="Assets\Scripts\PlayerLook.cs" />
