--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,8 @@ ExportedObj/
 # Temporary auto-generated Android Assets
 **/[Aa]ssets/[Ss]treamingAssets/aa.meta
 **/[Aa]ssets/[Ss]treamingAssets/aa/*
+
+# CSharp Config Files
+**/Assembly-CSharp.csproj
+**/Assembly-CSharp-Editor.csproj
+**/Assembly-CSharp-firstpass.csproj
